@@ -37,15 +37,19 @@
   </properties>
   <build>
     <plugins>
-      <!-- this configures the surefire plugin to run your tests with the 
+      <!-- this configures the surefire plugin to run your tests with the
         javaagent enabled -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.15</version>
         <configuration>
-          <argLine>-javaagent:${jaJar}
-            -Djava.util.logging.config.file=${basedir}/log.properties</argLine>
+          <argLine>
+            -javaagent:${jaJar}
+            -Djava.util.logging.config.file=${basedir}/log.properties
+            --add-opens java.base/java.lang=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED
+          </argLine>
           <workingDirectory>${basedir}/target</workingDirectory>
         </configuration>
       </plugin>
@@ -54,8 +58,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -114,7 +118,7 @@
                 <configuration>
                   <executable>java</executable>
                   <arguments>
-                    <argument>-server</argument>
+                    <argument>--add-opens java.base/java.lang=ALL-UNNAMED</argument>
                     <argument>-classpath</argument>
                     <classpath />
                     <argument>-javaagent:${jaJar}</argument>
